fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,7 @@ footer nav a {
 
 .strategy{ 
     padding-right: 60px;
+    margin-bottom: 20px;
 }
 .strategy h1 {
     margin-bottom: 10px;
